scripts/nullness/annotator/url888b6fd9b4_jmacglashan_commandsToTasks_tgz-pJ8-commands_tests_Model3TestsJ8.txt
../annotator/url888b6fd9b4_jmacglashan_commandsToTasks_tgz-pJ8-commands_tests_Model3TestsJ8/src/behavior/irl/TabularIRLPlannerFactory.java:10: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url888b6fd9b4_jmacglashan_commandsToTasks_tgz-pJ8-commands_tests_Model3TestsJ8/src/behavior/irl/TabularIRLPlannerFactory.java:32: error: cannot find symbol
	@Initializer public void changeGoal(RewardFunction rf, TerminalFunction tf){
	 ^
  symbol:   class Initializer
  location: class TabularIRLPlannerFactory
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: ../annotator/url888b6fd9b4_jmacglashan_commandsToTasks_tgz-pJ8-commands_tests_Model3TestsJ8/src/commands/auxiliarytools/TrajectoryRecorder.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
